# ivy_cmake

./: README.md
cmake_calcexe/: CMakeLists.txt  README  build.xml  ivy.xml  ivysettings.xml
cmake_calcexe/src/main/cpp/: main.cpp
cmake_inccalc/: README  build.xml  ivy.xml
cmake_libcalc/: CMakeLists.txt  README  build.xml  ivy.xml
cmake_libcalc/src/main/cpp/: Calculator.cpp
